{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 70,
  "lineage": "c041f242-304c-1e33-cf98-96fe31aaf8e9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:500536791103:loadbalancer/app/smartfleet-elb/e3c1f83ea0c5a872",
            "arn_suffix": "app/smartfleet-elb/e3c1f83ea0c5a872",
            "desync_mitigation_mode": "defensive",
            "dns_name": "smartfleet-elb-1444293480.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:500536791103:loadbalancer/app/smartfleet-elb/e3c1f83ea0c5a872",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "smartfleet-elb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03d90da85023d1dc3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0159b8cfd8fe0f9cc"
              },
              {
                "subnet_id": "subnet-0e4dd81c052e89f4c"
              }
            ],
            "subnets": [
              "subnet-0159b8cfd8fe0f9cc",
              "subnet-0e4dd81c052e89f4c"
            ],
            "tags": {
              "ALIAS_PROJECT": "SmartFleet",
              "ENV": "development",
              "MANAGED_BY": "Terraform"
            },
            "tags_all": {
              "ALIAS_PROJECT": "SmartFleet",
              "ENV": "development",
              "MANAGED_BY": "Terraform"
            },
            "vpc_id": "vpc-0ea96732f6add1a88",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.http_sg",
            "aws_subnet.Public_subnet-a",
            "aws_subnet.Public_subnet-b",
            "aws_vpc.smartfleet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:500536791103:internet-gateway/igw-008eb97d614514581",
            "id": "igw-008eb97d614514581",
            "owner_id": "500536791103",
            "tags": {
              "ALIAS_PROJECT": "SmartFleet",
              "ENV": "development",
              "MANAGED_BY": "Terraform",
              "Name": "SmartFleet-igw"
            },
            "tags_all": {
              "ALIAS_PROJECT": "SmartFleet",
              "ENV": "development",
              "MANAGED_BY": "Terraform",
              "Name": "SmartFleet-igw"
            },
            "vpc_id": "vpc-0ea96732f6add1a88"
          },
          "dependencies": [
            "aws_vpc.smartfleet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:500536791103:listener/app/smartfleet-elb/e3c1f83ea0c5a872/9136ab57c90176ea",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:500536791103:targetgroup/target-group/bf2831ec02df4e4f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:500536791103:listener/app/smartfleet-elb/e3c1f83ea0c5a872/9136ab57c90176ea",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:500536791103:loadbalancer/app/smartfleet-elb/e3c1f83ea0c5a872",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "ALIAS_PROJECT": "SmartFleet",
              "ENV": "development",
              "MANAGED_BY": "Terraform"
            },
            "tags_all": {
              "ALIAS_PROJECT": "SmartFleet",
              "ENV": "development",
              "MANAGED_BY": "Terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_lb_target_group.target_group",
            "aws_security_group.http_sg",
            "aws_subnet.Public_subnet-a",
            "aws_subnet.Public_subnet-b",
            "aws_vpc.smartfleet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:500536791103:targetgroup/target-group/bf2831ec02df4e4f",
            "arn_suffix": "targetgroup/target-group/bf2831ec02df4e4f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:500536791103:targetgroup/target-group/bf2831ec02df4e4f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "ALIAS_PROJECT": "SmartFleet",
              "ENV": "development",
              "MANAGED_BY": "Terraform"
            },
            "tags_all": {
              "ALIAS_PROJECT": "SmartFleet",
              "ENV": "development",
              "MANAGED_BY": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0ea96732f6add1a88"
          },
          "dependencies": [
            "aws_vpc.smartfleet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "to_net",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:500536791103:route-table/rtb-0eb2f4574b4493fde",
            "id": "rtb-0eb2f4574b4493fde",
            "owner_id": "500536791103",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-008eb97d614514581",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ALIAS_PROJECT": "SmartFleet",
              "ENV": "development",
              "MANAGED_BY": "Terraform",
              "Name": "SmartFleet_rtb_to_net"
            },
            "tags_all": {
              "ALIAS_PROJECT": "SmartFleet",
              "ENV": "development",
              "MANAGED_BY": "Terraform",
              "Name": "SmartFleet_rtb_to_net"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea96732f6add1a88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.smartfleet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fdc559eb6e5c491",
            "route_table_id": "rtb-0eb2f4574b4493fde",
            "subnet_id": "subnet-0159b8cfd8fe0f9cc"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.to_net",
            "aws_subnet.Public_subnet-a",
            "aws_vpc.smartfleet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d9297b1e6708bc5",
            "route_table_id": "rtb-0eb2f4574b4493fde",
            "subnet_id": "subnet-0e4dd81c052e89f4c"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.to_net",
            "aws_subnet.Public_subnet-b",
            "aws_vpc.smartfleet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:500536791103:security-group/sg-03d90da85023d1dc3",
            "description": "internet source access",
            "egress": [],
            "id": "sg-03d90da85023d1dc3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SmartFleet-access-public-ecs",
            "name_prefix": "",
            "owner_id": "500536791103",
            "revoke_rules_on_delete": false,
            "tags": {
              "ALIAS_PROJECT": "SmartFleet",
              "ENV": "development",
              "MANAGED_BY": "Terraform"
            },
            "tags_all": {
              "ALIAS_PROJECT": "SmartFleet",
              "ENV": "development",
              "MANAGED_BY": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea96732f6add1a88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.smartfleet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:500536791103:security-group/sg-0b56362f018601fd6",
            "description": "intranet access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b56362f018601fd6",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.2.1.0/24",
                  "10.2.4.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "SmartFleet-private",
            "name_prefix": "",
            "owner_id": "500536791103",
            "revoke_rules_on_delete": false,
            "tags": {
              "ALIAS_PROJECT": "SmartFleet",
              "ENV": "development",
              "MANAGED_BY": "Terraform",
              "Name": "sg-intranet_access - SmartFleet"
            },
            "tags_all": {
              "ALIAS_PROJECT": "SmartFleet",
              "ENV": "development",
              "MANAGED_BY": "Terraform",
              "Name": "sg-intranet_access - SmartFleet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0130d20dc9424d04b"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:500536791103:security-group/sg-0782d0e7dad301366",
            "description": "internet source access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0782d0e7dad301366",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3333,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3333
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SmartFleet-access-public",
            "name_prefix": "",
            "owner_id": "500536791103",
            "revoke_rules_on_delete": false,
            "tags": {
              "ALIAS_PROJECT": "SmartFleet",
              "ENV": "development",
              "MANAGED_BY": "Terraform",
              "Name": "sg-access_from_net - SmartFleet"
            },
            "tags_all": {
              "ALIAS_PROJECT": "SmartFleet",
              "ENV": "development",
              "MANAGED_BY": "Terraform",
              "Name": "sg-access_from_net - SmartFleet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea96732f6add1a88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.smartfleet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_from_net",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-452312192",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0782d0e7dad301366",
            "security_group_rule_id": "sgr-0b81ba970157cf63e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public",
            "aws_vpc.smartfleet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_from_net_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1923860596",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03d90da85023d1dc3",
            "security_group_rule_id": "sgr-04b0061123b82b624",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.http_sg",
            "aws_vpc.smartfleet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.2.1.0/24",
              "10.2.4.0/24"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-4015778390",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b56362f018601fd6",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.private",
            "aws_subnet.Private_subnet-a",
            "aws_subnet.Private_subnet-b",
            "aws_vpc.smartfleet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-718436067",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b56362f018601fd6",
            "security_group_rule_id": "sgr-027f52da4229e7f72",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_from_net",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2894061877",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0782d0e7dad301366",
            "security_group_rule_id": "sgr-000b252a8de510413",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public",
            "aws_vpc.smartfleet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "to_net",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-650738765",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0782d0e7dad301366",
            "security_group_rule_id": "sgr-0d9729a4ecc4a20e3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public",
            "aws_vpc.smartfleet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:500536791103:subnet/subnet-00e8e840684c0b614",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e8e840684c0b614",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "500536791103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ALIAS_PROJECT": "SmartFleet",
              "ENV": "development",
              "MANAGED_BY": "Terraform",
              "Name": "SmartFleet-private-subnet-01"
            },
            "tags_all": {
              "ALIAS_PROJECT": "SmartFleet",
              "ENV": "development",
              "MANAGED_BY": "Terraform",
              "Name": "SmartFleet-private-subnet-01"
            },
            "vpc_id": "vpc-0ea96732f6add1a88"
          },
          "dependencies": [
            "aws_vpc.smartfleet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:500536791103:subnet/subnet-067790f23b3d8c591",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.2.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067790f23b3d8c591",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "500536791103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ALIAS_PROJECT": "SmartFleet",
              "ENV": "development",
              "MANAGED_BY": "Terraform",
              "Name": "SmartFleet-public-subnet-01"
            },
            "tags_all": {
              "ALIAS_PROJECT": "SmartFleet",
              "ENV": "development",
              "MANAGED_BY": "Terraform",
              "Name": "SmartFleet-public-subnet-01"
            },
            "vpc_id": "vpc-0ea96732f6add1a88"
          },
          "dependencies": [
            "aws_vpc.smartfleet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:500536791103:subnet/subnet-0159b8cfd8fe0f9cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.2.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0159b8cfd8fe0f9cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "500536791103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ALIAS_PROJECT": "SmartFleet",
              "ENV": "development",
              "MANAGED_BY": "Terraform",
              "Name": "SmartFleet-public-subnet-01"
            },
            "tags_all": {
              "ALIAS_PROJECT": "SmartFleet",
              "ENV": "development",
              "MANAGED_BY": "Terraform",
              "Name": "SmartFleet-public-subnet-01"
            },
            "vpc_id": "vpc-0ea96732f6add1a88"
          },
          "dependencies": [
            "aws_vpc.smartfleet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:500536791103:subnet/subnet-0e4dd81c052e89f4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.2.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4dd81c052e89f4c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "500536791103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ALIAS_PROJECT": "SmartFleet",
              "ENV": "development",
              "MANAGED_BY": "Terraform",
              "Name": "SmartFleet-public-subnet-01"
            },
            "tags_all": {
              "ALIAS_PROJECT": "SmartFleet",
              "ENV": "development",
              "MANAGED_BY": "Terraform",
              "Name": "SmartFleet-public-subnet-01"
            },
            "vpc_id": "vpc-0ea96732f6add1a88"
          },
          "dependencies": [
            "aws_vpc.smartfleet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "smartfleet_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:500536791103:vpc/vpc-0ea96732f6add1a88",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-013fe1106742f261e",
            "default_route_table_id": "rtb-0b2710a0a5582d229",
            "default_security_group_id": "sg-05773cbf26393af77",
            "dhcp_options_id": "dopt-0b91bc19ebc78f523",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ea96732f6add1a88",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b2710a0a5582d229",
            "owner_id": "500536791103",
            "tags": {
              "ALIAS_PROJECT": "SmartFleet",
              "ENV": "development",
              "MANAGED_BY": "Terraform",
              "Name": "SmartFleet-VPC"
            },
            "tags_all": {
              "ALIAS_PROJECT": "SmartFleet",
              "ENV": "development",
              "MANAGED_BY": "Terraform",
              "Name": "SmartFleet-VPC"
            }
          }
        }
      ]
    }
  ]
}